package main.controllers;

import main.models.Answers;
import main.models.Questions;
import main.models.Result;
import main.views.pages.ExamEndedView;
import main.views.pages.ExamView;
import javax.swing.*;

public class PresentExamController {
    private void setResult(Option){}
    private void chooseExam(Exam_Name){}
    private void startExam(){}
    private Answers getAnswers(){}
    private Questions getQuestions(){}
    
}
