package main.views.pages;

import main.models.Certificate;

public class CertificateView {
    private void show(Certificate)()
}
