package main.views.pages;

import main.views.pages.NewExamView;
import main.views.pages.ExamView;
import main.views.components.Message;

public class ExamPublishedView {
    
}
